chore(security): externalize sensitive backend config to env vars

--- a/research-backend/项目说明.md
+++ b/research-backend/项目说明.md
@@ -189,3 +189,14 @@ HTTP请求封装： 使用Axios创建请求实例，并添加请求/响应拦截
 后端： 打包成JAR文件，使用java -jar命令运行，或使用Docker容器化部署。
 
 配置Nginx反向代理，将API请求转发到后端服务。
+
+
+七、 安全与配置治理（新增）
+为避免敏感信息硬编码，后端已统一改为环境变量注入：
+
+- 数据库：`DB_HOST`、`DB_PORT`、`DB_NAME`、`DB_USERNAME`、`DB_PASSWORD`、`DB_SSL`
+- Redis：`REDIS_HOST`、`REDIS_PORT`、`REDIS_PASSWORD`、`REDIS_DATABASE`
+- JWT：`JWT_SECRET`、`JWT_EXPIRATION`
+
+本地开发可参考 `research-backend/.env.example` 复制为 `.env`（或在IDE运行配置中设置环境变量）。
+生产环境必须提供 `JWT_SECRET`，且需使用长度 >= 32 的高强度随机密钥。
